src/styles.css
.home {
    display:flex;
    align-items: center;
    flex-direction: column;
}

.nav {
    display:flex;
    justify-content: space-around;
    align-items: center;
    font-size: 22px;
}

.drinks {
    display:flex;
    align-items:center;
    flex-direction:column;
    margin-top: 10px;
}

.img {
    width: 100px;
    height: 100px;
}

.drinklist {
    display:flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.suggestion {
    display:flex;
    align-items: center;
    flex-direction: column;
    border-style: solid;
    margin-right: 450px;
    margin-left: 450px; 
    padding-top: 10px;
    padding-bottom: 10px;
}

